<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_operation_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@id/tv_result_main"
        tools:text="765 + 567" />

    <TextView
        android:id="@+id/tv_result_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="right"
        android:text="@string/first_result"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/ll_first_main" />

    <LinearLayout
        android:id="@+id/ll_first_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/ll_second_main">

        <Button
            android:id="@+id/btn_seven_main"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/seven" />

        <Button
            android:id="@+id/btn_eight_main"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/eight" />

        <Button
            android:id="@+id/btn_nine_main"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/nine" />

        <Button
            android:id="@+id/btn_mul_main"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/mul" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_second_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/ll_third_main">

        <Button
            android:id="@+id/btn_four_main"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/four" />

        <Button
            android:id="@+id/btn_five_main"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/five" />

        <Button
            android:id="@+id/btn_six_main"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/six" />

        <Button
            android:id="@+id/btn_div_main"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/div" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_third_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/ll_fourth_main">

        <Button
            android:id="@+id/btn_one_main"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/one" />

        <Button
            android:id="@+id/btn_two_main"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/two" />

        <Button
            android:id="@+id/btn_three_main"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/three" />

        <Button
            android:id="@+id/btn_add_main"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/add" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_fourth_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_clear_main"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/c" />

        <Button
            android:id="@+id/btn_zero_main"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/zero" />

        <Button
            android:id="@+id/btn_result_main"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/result" />

        <Button
            android:id="@+id/btn_sub_main"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/sub" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>